chibi altare flicker fix

--- a/css/nav.css
+++ b/css/nav.css
@@ -55,7 +55,7 @@ nav a#nav-home #chibi-altare {
 
   transform-origin: 50% 100%;
 
-  transition: 0.5s opacity ease, 0.5s transform ease;
+  /* transition: 0.5s opacity ease, 0.5s transform ease; */
 }
 
 nav a#nav-home:hover #chibi-altare,
@@ -213,7 +213,6 @@ nav a#nav-credits:focus-visible:not(.active)::before {
     width: 5em;
     bottom: calc(100% - 3px);
     right: auto;
-    visibility: visible;
     opacity: 1;
   }
 
